CSS fix page-content right side align

--- a/publishable/assets/css/app.css
+++ b/publishable/assets/css/app.css
@@ -15043,7 +15043,7 @@ a:hover {
   font-family: 'Open Sans', sans-serif;
   height: 60px;
   line-height: 60px;
-  padding: 0 20px 0 20px;
+  padding: 0 10px 0 20px;
 }
 
 .navbar .dropdown-menu {
@@ -15401,8 +15401,11 @@ a:hover {
 /* Main body section */
 .app-container .side-body {
   margin-left: 75px;
-  margin-right: 15px;
   transition: all 0.25s;
+}
+
+.app-container .side-body .container-fluid {
+  padding-right: 0;
 }
 
 .app-container.expanded .side-body {
